test_suite/tests/ui/conflict/flatten-skip-deserializing.stderr
error: #[serde(flatten] can not be combined with #[serde(skip_deserializing)]
 --> $DIR/flatten-skip-deserializing.rs:4:10
  |
4 | #[derive(Deserialize)]
  |          ^^^^^^^^^^^

error: aborting due to previous error

